creacion de apis para importar dotaciones de empleados

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:oracle:thin:@10.10.5.112:1521:oceanic
 spring.datasource.username=ka
 spring.datasource.password=K#0stazul
 spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 server.port=8085
 server.http.enabled=true
 
