--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
 spring.jpa.hibernate.ddl-auto=none
 server.port=8085
 server.http.enabled=true
+server.error.include-message=always
 
 spring.jackson.time-zone=America/Bogota
 
